# mlp-server

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: clean_data.py  predict.py  train.py
src/: main.rs  types.rs
