[package]
name = "mlp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2", "json", "macros", "matched-path", "multipart", "original-uri", "tokio", "tower-log", "form", "query", "headers"] }
bincode = "1.3.3"
chrono = "0.4.29"
clap = { version = "4.4.6", features = ["derive"] }
command-macros = "0.2.9"
csv = "1.2.2"
hyper = { version = "0.14.27", features = ["full"] }
linfa = { version = "0.6.1", features = ["serde", "ndarray-linalg", "blas", "openblas-system"] }
linfa-linear = { version = "0.6.1", features = ["ndarray-linalg"] }
mime_guess = "2.0.4"
ndarray = { version = "0.15.6", features = ["serde", "rayon", "matrixmultiply-threading", "blas"]}
ndarray-csv = "0.5.2"
openssl = "0.10.57"
serde = { version = "1.0.188", features = ["std", "derive"] }
serde_json = "1.0.105"
sha256 = { version = "1.4.0", features = ["tokio", "native_openssl"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["std", "v4", "serde"] }
